fix styling on safari && firefox

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+    <link rel="icon" href="/assets/images/netflix_icon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="The best Neflix Clone App"/>
-    <title>Netflix 2.0</title>
+    <meta name="description" content="The best Netflix Clone App"/>
+    <title>Netflix Clone / Concept</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
